[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tinyagent"
version = "0.2.0"
description = "Zero-dependency async-first agent orchestration framework"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "TinyAgent Contributors"}
]
keywords = ["ai", "agents", "orchestration", "async", "graph", "workflow"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

[project.urls]
Homepage = "https://github.com/ayushi-agarwall/tinyagent"
Documentation = "https://github.com/ayushi-agarwall/tinyagent#readme"
Repository = "https://github.com/ayushi-agarwall/tinyagent"
Issues = "https://github.com/ayushi-agarwall/tinyagent/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/tinyagent"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
